[package]
name = "ingrain_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = {version = "0.12", features = ["json", "blocking", "multipart", "stream"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
httpmock = "0.8.2"
futures = "0.3.31"
once_cell = "1.21.3"